implement jquery, dump fb desc on events page

--- a/events/index.html
+++ b/events/index.html
@@ -8,6 +8,7 @@
         <link href="../main.css" rel="stylesheet">
     </head>
     <body>
+        <script src="../jquery-1.12.0.js"></script>
         <script src="loadevents.js"></script>
         <div class="nav">
             <div class="container">
@@ -42,6 +43,12 @@
             <div class="container">
                 <h1>Our Events</h1>
                 <p>We put on numerous events throughout the year, ranging from pub socials to a trip to Ireland</p>
+            </div>
+        </div>
+
+        <div class ="events-list">
+            <div class="container">
+                <ul class="events"></ul>
             </div>
         </div>
 
