add exec pictures to about, add beginnings of contact us

--- a/about/index.html
+++ b/about/index.html
@@ -67,65 +67,69 @@
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-md-2">
+        <div class="president">
+            <div class="row">
+                <div class="col-md-2">
 
-            </div>
-            <div class="col-md-4">
-                <div class="thumbnail">
-                    <img src="http://goo.gl/0Kd7UO">
-                    <h4>Hannah El-Gazzar</h4>
-                    <h3>President</h3>
-                </div> 
-            </div>
-            <div class="col-md-4">
-                <div class="thumbnail">
-                    <img src="http://goo.gl/0Kd7UO">
-                    <h4>Hassan Elgaddal</h4>
-                    <h3>Vice-President</h3>       
-                </div> 
-            </div>
-            <div class="col-md-2">
+                </div>
+                <div class="col-md-4">
+                    <div class="thumbnail">
+                        <img src="hannah.png">
+                        <h4>Hannah El-Gazzar</h4>
+                        <h3>Co-President</h3>
+                    </div> 
+                </div>
+                <div class="col-md-4">
+                    <div class="thumbnail">
+                        <img src="hassan.png">
+                        <h4>Hassan Elgaddal</h4>
+                        <h3>Co-President</h3>       
+                    </div> 
+                </div>
+                <div class="col-md-2">
 
+                </div>
             </div>
         </div>
 
-        <div class="container">
-            <div class = "row">
-                <div class="col-md-4">
-                    <div class="thumbnail">
-                        <img src="http://goo.gl/0sX3jq">
-                        <h5>Richard Webb</h5>
-                        <h4>Secretary</h4>
+        <div class="officer">
+            <div class="container">
+                <div class = "row">
+                    <div class="col-md-4">
+                        <div class="thumbnail">
+                            <img src="richard.png">
+                            <h5>Richard Webb</h5>
+                            <h4>Secretary</h4>
+                        </div>
+                        <div class="thumbnail">
+                            <img src="harry.png">
+                            <h5>Harry Tattan-Birch</h5>
+                            <h4>Marketing Officer</h4>
+                        </div>
                     </div>
-                    <div class="thumbnail">
-                        <img src="http://goo.gl/an2HXY">
-                        <h5>Harry Tattan-Birch</h5>
-                        <h4>Marketing Officer</h4>
+                    <div class="col-md-4">
+                        <div class="thumbnail">
+                            <img src="charlie.png">
+                            <h5>Charlie Major</h5>
+                            <h4>Treasurer</h4>
+                        </div>
+                        <div class="thumbnail">
+                            <img src="marcus.png">
+                            <h5>Marcus Greenwood</h5>
+                            <h4>Fundraising Officer</h4>
+                        </div>
                     </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="thumbnail">
-                        <img src="http://goo.gl/Av1pac">
-                        <h5>Charlie Major</h5>
-                        <h4>Treasurer</h4>
-                    </div>
-                    <div class="thumbnail">
-                        <img src="http://goo.gl/vw43v1">
-                        <h5>Marcus Greenwood</h5>
-                        <h4>Fundraising Officer</h4>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="thumbnail">
-                        <img src="http://goo.gl/vw43v1">
-                        <h5>Sophie Hartles</h5>
-                        <h4>Social Secretary</h4>
-                    </div>
-                    <div class="thumbnail">
-                        <img src="http://goo.gl/vw43v1">
-                        <h5>Louis Smith</h5>
-                        <h4>I.T. Officer</h4>
+                    <div class="col-md-4">
+                        <div class="thumbnail">
+                            <img src="bethan.png">
+                            <h5>Bethan Mott</h5>
+                            <h4>Social Secretary</h4>
+                        </div>
+                        <div class="thumbnail">
+                            <img src="louis.png">
+                            <h5>Louis Smith</h5>
+                            <h4>I.T. Officer</h4>
+                        </div>
                     </div>
                 </div>
             </div>
