new font, add favicon, general tweaks for release

--- a/contact/index.html
+++ b/contact/index.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Warwick Irish Society - Contact</title>
+        <title>Contact • Warwick Irish</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="shortcut icon" href="../clover.ico"/>
+        <link href='https://fonts.googleapis.com/css?family=Bree+Serif' rel='stylesheet' type='text/css'>
         <link href="../bootstrap.css" rel="stylesheet"> 
         <link href="../main.css" rel="stylesheet">
     </head>
     <body>
         <div id="fb-root"></div>
-        <script>(function (d, s, id) {
+        <script>
+            (function (d, s, id) {
                 var js, fjs = d.getElementsByTagName(s)[0];
                 if (d.getElementById(id))
                     return;
                 js = d.createElement(s);
                 js.id = id;
-                js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.5&appId=APP-ID";
+                js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.5&appId=664792350330137";
                 fjs.parentNode.insertBefore(js, fjs);
-            }(document, 'script', 'facebook-jssdk'));</script>
+            }(document, 'script', 'facebook-jssdk'));
+        </script>
         <div class="nav">
             <div class="container">
                 <ul class="pull-left">
@@ -57,9 +61,9 @@
         <div class="info-panel">
             <div class="container">
                 <div class="row">
-                <p>You can keep up to date with what's happening within the society by liking our <a href='https://www.facebook.com/warwickirishsociety/'>facebook page</a></p>
-                <p>If you want to contact us directly, feel free to leave us a message on the page.</p>
-                <div class="fb-page" data-href="https://www.facebook.com/warwickirishsociety/" data-tabs="messages, events" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/warwickirishsociety/"><a href="https://www.facebook.com/warwickirishsociety/">Warwick Irish Society</a></blockquote></div></div>
+                    <p>You can keep up to date with what's happening within the society by liking our <a href='https://www.facebook.com/warwickirishsociety/'>facebook page</a></p>
+                    <p>If you want to contact us directly, feel free to leave us a message on the page.</p>
+                    <div class="fb-page" data-href="https://www.facebook.com/warwickirishsociety/" data-tabs="messages, events" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/warwickirishsociety/"><a href="https://www.facebook.com/warwickirishsociety/">Warwick Irish Society</a></blockquote></div></div>
                 </div>
                 <p>Alternatively for any business enquiries, you can email the exec team at emailaddress@email.com</p>
             </div>
@@ -68,11 +72,11 @@
         <div class="lower-bar">
             <div class ="container">
                 <div class="pull-left">
-                    <p>Warwick Irish Society is proudly sponsored by AUGHURSIHFIUE</p>
+                    <p>Warwick Irish Society is proudly supported by Warwick SU</p>
                 </div>
 
                 <div class="pull-right">
-                    <p>&copy Warwick Irish Society 2015
+                    <p>&copy Warwick Irish Society 2016
                 </div>
             </div>
         </div>
