--- a/gallery/index.html
+++ b/gallery/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Warwick Irish Society - Gallery</title>
+        <title>Gallery • Warwick Irish</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="shortcut icon" href="../clover.ico"/>
+        <link href='https://fonts.googleapis.com/css?family=Bree+Serif' rel='stylesheet' type='text/css'>
         <link href="../bootstrap.css" rel="stylesheet"> 
         <link href="../main.css" rel="stylesheet">
         <link href="gallery.css" rel="stylesheet">
@@ -58,35 +60,35 @@
 
             <div class="slide">
                 <div class="container">
-                    <img src="../pic2.png">
+                    <img src="../home-events.png">
                 </div>      
             </div>
 
             <div class="slide">
                 <div class="container">
-                    <img src="../pic3.png">
+                    <img src="../home-about.png">
                 </div>      
             </div>
         </div>
 
         <div class="slider-nav">
-            <a href="#" class="arrow-prev"><img src="../arrow-prev.png"></a>
+            <a href="#" class="arrow-prev"><img src="arrow-prev.png"></a>
             <ul class="slider-dots">
                 <li class="dot active-dot">&bull;</li>
                 <li class="dot">&bull;</li>
                 <li class="dot">&bull;</li>
             </ul>
-            <a href="#" class="arrow-next"><img src="../arrow-next.png"></a>
+            <a href="#" class="arrow-next"><img src="arrow-next.png"></a>
         </div>
 
         <div class="lower-bar">
             <div class ="container">
                 <div class="pull-left">
-                    <p>Warwick Irish Society is proudly sponsored by AUGHURSIHFIUE</p>
+                    <p>Warwick Irish Society is proudly supported by Warwick SU</p>
                 </div>
 
                 <div class="pull-right">
-                    <p>&copy Warwick Irish Society 2015
+                    <p>&copy Warwick Irish Society 2016
                 </div>
             </div>
         </div>
