--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Warwick Irish Society - Home</title>
+        <title>Home • Warwick Irish</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="shortcut icon" href="clover.ico"/>
+        <link href='https://fonts.googleapis.com/css?family=Bree+Serif' rel='stylesheet' type='text/css'>
         <link href="bootstrap.css" rel="stylesheet"> 
         <link href="main.css" rel="stylesheet">
         <link href="home.css" rel="stylesheet">
@@ -51,7 +53,7 @@
                 <div class="row">
                     <div class="col-md-4">
                         <h3>About</h3>
-                        <img src="pic1.png">
+                        <img src="home-about.png">
                         <p>Founded in 2015, Warwick Irish Society was set up to promote Irish culture within the university.</p>
                         <p>
                             <a href="about/index.html">Learn more about Irish Soc</a>
@@ -60,7 +62,7 @@
 
                     <div class="col-md-4">
                         <h3>Events</h3>
-                        <img src="pic2.png">
+                        <img src="home-events.png">
                         <p>We host numerous events throughout the year, ranging from pub socials and circling for Pop! to a trip to Ireland.</p>
                         <p>
                             <a href="events/index.html">Find out which events are coming up</a>
@@ -69,7 +71,7 @@
 
                     <div class="col-md-4">
                         <h3>Gallery</h3>
-                        <img src="pic3.png">
+                        <img src="home-gallery.png">
                         <p>Our events are always hugely popular with students regardless of background.</p>
                         <p>
                             <a href="gallery/index.html">See the pictures from our latest events</a>
@@ -82,11 +84,11 @@
         <div class="lower-bar">
             <div class ="container">
                 <div class="pull-left">
-                    <p>Warwick Irish Society is proudly sponsored by AUGHURSIHFIUE</p>
+                    <p>Warwick Irish Society is proudly supported by Warwick SU</p>
                 </div>
 
                 <div class="pull-right">
-                    <p>&copy Warwick Irish Society 2015
+                    <p>&copy Warwick Irish Society 2016
                 </div>
             </div>
         </div>
