--- a/about/index.html
+++ b/about/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Warwick Irish Society - About</title>
+        <title>About • Warwick Irish</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="shortcut icon" href="../clover.ico"/>
+        <link href='https://fonts.googleapis.com/css?family=Bree+Serif' rel='stylesheet' type='text/css'>
         <link href="../bootstrap.css" rel="stylesheet"> 
         <link href="../main.css" rel="stylesheet">
         <link href="about.css" rel="stylesheet">
@@ -48,20 +50,13 @@
         <div class="text-body">
             <div class="container">
                 <h3>History</h3>
-                <p>Warwick Irish Society was established in December 2015. Loads of text can go here about the background
-                    lasduwajoij jifejo sd jeoij dj dsvujewoij fks vuith jsdjk fjoiewj dks 
-                    fsdofjijsd oijds cjn csd cnsiuuidj cjsd jsijdi cjsd cs d 
-                    csd josjdicj iosjdiocj siodj sdicji ijsodjci sdcoijis dc
-                    ds jciosdjoi jcdsiojc sdiojc ios idsucihrui hvu duvd
-                    fv dfhuhvudfih iudfhvudfi uidfhv oodjicjscdsj oids.
+                <p>
+                    We are the Warwick Irish Society, one of the newest societies on campus!
+                    If you have an Irish background, are interested in Irish culture or just want to have some great craic, then this is the society for you!
                 </p>
                 <p>
-                    Here is a new paragraph. daudij adwj awj auj doisj aiwjiojd aidj
-                    a wduiahwu idahuishdu iwhuai dijwaio jiojrigjiosrj id ghojrdi grd
-                    g gdrgj diugui joajiowj diofjbihru jciojd cich eiisjf ijgiot iosjf
-                    sefuih suiehfui sdjf oijgtio siofuhs frsu jojgij ojicj soij escijes 
-                    soefjisejf sieojf iosjfieosj io sjioefj iosjefioj siejfiosji oefjse
-                    s fsuefjise o se.
+                    We were only founded in 2015 and already our exec are working on some great events for this year and the next.
+                    We hold regular social events including; circling before club nights, talks from influential Irish speakers, and socials for big Irish events like St. Patrick's Day! 
                 </p>
                 <h3>Our Exec</h3>
             </div>
@@ -138,11 +133,11 @@
         <div class="lower-bar">
             <div class ="container">
                 <div class="pull-left">
-                    <p>Warwick Irish Society is proudly sponsored by AUGHURSIHFIUE</p>
+                    <p>Warwick Irish Society is proudly supported by Warwick SU</p>
                 </div>
 
                 <div class="pull-right">
-                    <p>&copy Warwick Irish Society 2015
+                    <p>&copy Warwick Irish Society 2016
                 </div>
             </div>
         </div>
