--- a/events/index.html
+++ b/events/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Warwick Irish Society - Events</title>
+        <title>Events • Warwick Irish</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="shortcut icon" href="../clover.ico"/>
+        <link href='https://fonts.googleapis.com/css?family=Bree+Serif' rel='stylesheet' type='text/css'>
         <link href="../bootstrap.css" rel="stylesheet"> 
         <link href="../main.css" rel="stylesheet">
         <link href='events.css' rel="stylesheet">
@@ -46,8 +48,23 @@
                 <p>We put on numerous events throughout the year, ranging from pub socials to a trip to Ireland</p>
             </div>
         </div>
+        
+        <div class='events-list'>
+            <p>
+                We've got loads of events planned throughout term 2 and 3 including (but not limited to):
+            </p>
+            <ul>
+                <li>A welcome circle at Kelsey's before heading to Smack!</li>
+                <li>A joint event with Welsh Soc for the Six Nations. C'mon Ireland!!</li>
+                <li>Circling at POP!</li>
+                <li>A MASSIVE St. Patrick's Day bar crawl themed "<span style="color: #7CB833">Go Green Or Go Home</span>"
+            </ul>
+            <p>
+                Be sure to check back here or on our facebook page for dates, times and to book your tickets.
+            </p>
+        </div>
 
-        <div class ="events-list">
+        <!--<div class ="events-list">
             <div class="container">
                 <div class="event">
                     <div class="top-bar">
@@ -88,16 +105,16 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>-->
 
         <div class="lower-bar">
             <div class ="container">
                 <div class="pull-left">
-                    <p>Warwick Irish Society is proudly sponsored by AUGHURSIHFIUE</p>
+                    <p>Warwick Irish Society is proudly supported by Warwick SU</p>
                 </div>
 
                 <div class="pull-right">
-                    <p>&copy Warwick Irish Society 2015
+                    <p>&copy Warwick Irish Society 2016
                 </div>
             </div>
         </div>
