improve contact us page, add grey boxes to text, update exec photos

--- a/about/index.html
+++ b/about/index.html
@@ -69,14 +69,14 @@
                 </div>
                 <div class="col-md-4">
                     <div class="thumbnail">
-                        <img src="hannah.png">
+                        <img src="co-pres1.png">
                         <h4>Hannah El-Gazzar</h4>
                         <h3>Co-President</h3>
                     </div> 
                 </div>
                 <div class="col-md-4">
                     <div class="thumbnail">
-                        <img src="hassan.png">
+                        <img src="co-pres2.png">
                         <h4>Hassan Elgaddal</h4>
                         <h3>Co-President</h3>       
                     </div> 
@@ -92,36 +92,36 @@
                 <div class = "row">
                     <div class="col-md-4">
                         <div class="thumbnail">
-                            <img src="richard.png">
+                            <img src="secretary.png">
                             <h5>Richard Webb</h5>
                             <h4>Secretary</h4>
                         </div>
                         <div class="thumbnail">
-                            <img src="harry.png">
+                            <img src="marketing.png">
                             <h5>Harry Tattan-Birch</h5>
                             <h4>Marketing Officer</h4>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="thumbnail">
-                            <img src="charlie.png">
+                            <img src="treasurer.png">
                             <h5>Charlie Major</h5>
                             <h4>Treasurer</h4>
                         </div>
                         <div class="thumbnail">
-                            <img src="marcus.png">
+                            <img src="fundraising.png">
                             <h5>Marcus Greenwood</h5>
                             <h4>Fundraising Officer</h4>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="thumbnail">
-                            <img src="bethan.png">
+                            <img src="socialsec.png">
                             <h5>Bethan Mott</h5>
                             <h4>Social Secretary</h4>
                         </div>
                         <div class="thumbnail">
-                            <img src="louis.png">
+                            <img src="itofficer.png">
                             <h5>Louis Smith</h5>
                             <h4>I.T. Officer</h4>
                         </div>
