--- a/contact/index.html
+++ b/contact/index.html
@@ -8,6 +8,7 @@
         <link href='https://fonts.googleapis.com/css?family=Bree+Serif' rel='stylesheet' type='text/css'>
         <link href="../bootstrap.css" rel="stylesheet"> 
         <link href="../main.css" rel="stylesheet">
+        <link href="contact.css" rel="stylesheet">
     </head>
     <body>
         <div id="fb-root"></div>
@@ -61,11 +62,18 @@
         <div class="info-panel">
             <div class="container">
                 <div class="row">
-                    <p>You can keep up to date with what's happening within the society by liking our <a href='https://www.facebook.com/warwickirishsociety/'>facebook page</a></p>
-                    <p>If you want to contact us directly, feel free to leave us a message on the page.</p>
-                    <div class="fb-page" data-href="https://www.facebook.com/warwickirishsociety/" data-tabs="messages, events" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/warwickirishsociety/"><a href="https://www.facebook.com/warwickirishsociety/">Warwick Irish Society</a></blockquote></div></div>
+                    <div class='col-md-4'>
+                        <div class='left-side'>
+                            <div class="fb-page" data-href="https://www.facebook.com/warwickirishsociety/" data-tabs="messages" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/warwickirishsociety/"><a href="https://www.facebook.com/warwickirishsociety/">Warwick Irish Society</a></blockquote></div></div></div>
+                    </div>
+                    <div class='col-md-8'>
+                        <div class='right-side'>
+                            <p>You can keep up to date with what's happening within the society by liking our <a href='https://www.facebook.com/warwickirishsociety/'>facebook page</a>.</p>
+                            <p>If you want to contact us directly, feel free to leave us a message, using the box opposite and we'll get back to you as soon as possible.</p>
+                            <p>Alternatively, for any business enquiries please email us at <span style="color: #7CB833">warwickirishsociety@gmail.com</span>.</p>
+                        </div>
+                    </div>
                 </div>
-                <p>Alternatively for any business enquiries, you can email the exec team at emailaddress@email.com</p>
             </div>
         </div>
 
