--- a/events/index.html
+++ b/events/index.html
@@ -48,20 +48,22 @@
                 <p>We put on numerous events throughout the year, ranging from pub socials to a trip to Ireland</p>
             </div>
         </div>
-        
-        <div class='events-list'>
-            <p>
-                We've got loads of events planned throughout term 2 and 3 including (but not limited to):
-            </p>
-            <ul>
-                <li>A welcome circle at Kelsey's before heading to Smack!</li>
-                <li>A joint event with Welsh Soc for the Six Nations. C'mon Ireland!!</li>
-                <li>Circling at POP!</li>
-                <li>A MASSIVE St. Patrick's Day bar crawl themed "<span style="color: #7CB833">Go Green Or Go Home</span>"
-            </ul>
-            <p>
-                Be sure to check back here or on our facebook page for dates, times and to book your tickets.
-            </p>
+
+        <div class='container'>
+            <div class='events-list'>
+                <p>
+                    We've got loads of events planned throughout term 2 and 3 including (but not limited to):
+                </p>
+                <ul>
+                    <li>A welcome circle at Kelsey's before heading to Smack!</li>
+                    <li>A joint event with Welsh Soc for the Six Nations. C'mon Ireland!!</li>
+                    <li>Circling at POP!</li>
+                    <li>A MASSIVE St. Patrick's Day bar crawl themed "<span style="color: #7CB833">Go Green Or Go Home</span>"
+                </ul>
+                <p>
+                    Be sure to check back here or on our facebook page for dates, times and to book your tickets.
+                </p>
+            </div>
         </div>
 
         <!--<div class ="events-list">
