--- a/gallery/index.html
+++ b/gallery/index.html
@@ -47,7 +47,17 @@
             </div>
         </div>
 
-        <div class="slider-title">
+        <div class="container">
+            <div class='gallery-list'>
+                <p>
+                    Unfortunately, there's no pictures to show at the moment,
+                    but be sure to check back here after our first event to try and
+                    spot yourself! 
+                </p>
+            </div>
+        </div>
+
+        <!--<div class="slider-title">
             <h2>Event 1</h2>
         </div>
 
@@ -79,7 +89,7 @@
                 <li class="dot">&bull;</li>
             </ul>
             <a href="#" class="arrow-next"><img src="arrow-next.png"></a>
-        </div>
+        </div>-->
 
         <div class="lower-bar">
             <div class ="container">
