--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <div class="col-md-4">
                         <h3>Gallery</h3>
                         <img src="home-gallery.png">
-                        <p>Our events are always hugely popular with students regardless of background.</p>
+                        <p>Our events are always hugely popular with all students regardless of background.</p>
                         <p>
                             <a href="gallery/index.html">See the pictures from our latest events</a>
                         </p>
