design event info 'bubbles'

--- a/events/index.html
+++ b/events/index.html
@@ -49,7 +49,7 @@
             </div>
         </div>
 
-        <div class='container'>
+<!--        <div class='container'>
             <div class='events-list'>
                 <p>
                     We've got loads of events planned throughout term 2 and 3 including (but not limited to):
@@ -64,50 +64,41 @@
                     Be sure to check back here or on our facebook page for dates, times and to book your tickets.
                 </p>
             </div>
-        </div>
+        </div>-->
 
-        <!--<div class ="events-list">
+        <div class ="events-list">
             <div class="container">
                 <div class="event">
                     <div class="top-bar">
-                        <p class="start_time">START TIME</p>
-                        <h3 class="name">Event 1</h3>
-                        <ul class="guest_count">                 
-                            <li class ="attending_count">45</li>
-                            <li class="maybe_count">134</li>
-                            <li class="declined_count">23</li>
-                        </ul>
+                        <h3 class="event-name">Week 3 POP! Circling</h3>
+                        <h3 class="start-time">Wednesday 26th September 19:00</h3>
                     </div>
                     <div class="bottom-bar">
                         <p class="description">
-                            This is a description of the event. It will be taking place whenever, wherever etc
-                            You should definitely come along it will be fun!
+                            This is one of our first events of the year. Come along to meet the exec and your fellow Irish Society members!
+                            It promises to be a fun night so you should definitely give it a try. I'm just filling space now but that's cool
+                            I guess. SO yeah come along! Peace out bros! :)
                         </p>
-                        <button>I'm Going! :)</button>
-                        <button>I'm Can't Make It! :(</button>
+                        <button>Facebook</button>
+                        <button>Tickets</button>
                     </div>
                 </div>
-                <div class ="event">
+                <div class="event">
                     <div class="top-bar">
-                        <p class="start_time">START TIME</p>
-                        <h3 class="name">Event 2</h3>
-                        <ul class="guest_count">                 
-                            <li class ="attending_count">54</li>
-                            <li class="maybe_count">314</li>
-                            <li class="declined_count">32</li>
-                        </ul>
+                        <h3 class="event-name">Irish Politics Lecture</h3>
+                        <h3 class="start-time">Thursday 24th October 13:30</h3>
                     </div>
                     <div class="bottom-bar">
                         <p class="description">
                             This is a description of the event. It will be taking place whenever, wherever etc
                             You should definitely come along it will be fun!
                         </p>
-                        <button>I'm Going! :)</button>
-                        <button>I'm Can't Make It! :(</button>
+                        <button>Facebook</button>
+                        <button>Tickets</button>
                     </div>
                 </div>
             </div>
-        </div>-->
+        </div>
 
         <div class="lower-bar">
             <div class ="container">
