finish design for event bubble, implement loadevents.js

--- a/events/index.html
+++ b/events/index.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <script src="../jquery-1.12.0.js"></script>
-        <!--<script src="loadevents.js"></script>-->
+        <script src="loadevents.js"></script>
         <div class="nav">
             <div class="container">
                 <ul class="pull-left">
@@ -49,22 +49,22 @@
             </div>
         </div>
 
-<!--        <div class='container'>
-            <div class='events-list'>
-                <p>
-                    We've got loads of events planned throughout term 2 and 3 including (but not limited to):
-                </p>
-                <ul>
-                    <li>A welcome circle at Kelsey's before heading to Smack!</li>
-                    <li>A joint event with Welsh Soc for the Six Nations. C'mon Ireland!!</li>
-                    <li>Circling at POP!</li>
-                    <li>A MASSIVE St. Patrick's Day bar crawl themed "<span style="color: #7CB833">Go Green Or Go Home</span>"
-                </ul>
-                <p>
-                    Be sure to check back here or on our facebook page for dates, times and to book your tickets.
-                </p>
-            </div>
-        </div>-->
+        <!--        <div class='container'>
+                    <div class='events-list'>
+                        <p>
+                            We've got loads of events planned throughout term 2 and 3 including (but not limited to):
+                        </p>
+                        <ul>
+                            <li>A welcome circle at Kelsey's before heading to Smack!</li>
+                            <li>A joint event with Welsh Soc for the Six Nations. C'mon Ireland!!</li>
+                            <li>Circling at POP!</li>
+                            <li>A MASSIVE St. Patrick's Day bar crawl themed "<span style="color: #7CB833">Go Green Or Go Home</span>"
+                        </ul>
+                        <p>
+                            Be sure to check back here or on our facebook page for dates, times and to book your tickets.
+                        </p>
+                    </div>
+                </div>-->
 
         <div class ="events-list">
             <div class="container">
@@ -73,14 +73,16 @@
                         <h3 class="event-name">Week 3 POP! Circling</h3>
                         <h3 class="start-time">Wednesday 26th September 19:00</h3>
                     </div>
+
+                    <p class="description">
+                        This is one of our first events of the year. Come along to meet the exec and your fellow Irish Society members!
+                        It promises to be a fun night so you should definitely give it a try. I'm just filling space now but that's cool
+                        I guess. SO yeah come along! Peace out bros! :)
+                    </p>
                     <div class="bottom-bar">
-                        <p class="description">
-                            This is one of our first events of the year. Come along to meet the exec and your fellow Irish Society members!
-                            It promises to be a fun night so you should definitely give it a try. I'm just filling space now but that's cool
-                            I guess. SO yeah come along! Peace out bros! :)
-                        </p>
-                        <button>Facebook</button>
-                        <button>Tickets</button>
+                        <p class="location">Terrace Bar</p>
+                        <a href="https://www.facebook.com/warwickirishsociety/"><button>Facebook Event</button></a>
+                        <a href="https://www.warwicksu.com/"><button>Tickets</button></a>
                     </div>
                 </div>
                 <div class="event">
@@ -88,13 +90,16 @@
                         <h3 class="event-name">Irish Politics Lecture</h3>
                         <h3 class="start-time">Thursday 24th October 13:30</h3>
                     </div>
-                    <div class="bottom-bar">
+                    <div>
                         <p class="description">
                             This is a description of the event. It will be taking place whenever, wherever etc
                             You should definitely come along it will be fun!
                         </p>
-                        <button>Facebook</button>
-                        <button>Tickets</button>
+                        <div class="bottom-bar">
+                            <p class="location">MS02</p>
+                            <a href="https://www.facebook.com/warwickirishsociety/"><button>Facebook Event</button></a>
+                            <a href="https://www.warwicksu.com/"><button>Tickets</button></a>
+                        </div>
                     </div>
                 </div>
             </div>
