remove placeholder events, fix grammar

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -50,7 +50,7 @@
         <div class="container">
             <div class='gallery-list'>
                 <p>
-                    Unfortunately, there's no pictures to show at the moment,
+                    Unfortunately, there are no pictures to show at the moment,
                     but be sure to check back here after our first event to try and
                     spot yourself! 
                 </p>
