--- a/events/index.html
+++ b/events/index.html
@@ -68,7 +68,7 @@
 
         <div class ="events-list">
             <div class="container">
-                <div class="event">
+<!--                <div class="event">
                     <div class="top-bar">
                         <h3 class="event-name">Week 3 POP! Circling</h3>
                         <h3 class="start-time">Wednesday 26th September 19:00</h3>
@@ -101,7 +101,7 @@
                             <a href="https://www.warwicksu.com/"><button>Tickets</button></a>
                         </div>
                     </div>
-                </div>
+                </div>-->
             </div>
         </div>
 
